--- a/style.css
+++ b/style.css
@@ -99,3 +99,24 @@ footer {
   }
 }
 
+/* Mobile (small devices) */
+@media (max-width: 600px) {
+  body {
+    background-color: #BFD4E6;
+  }
+}
+
+/* Tablets (medium devices) */
+@media (min-width: 601px) and (max-width: 1024px) {
+  body {
+    background-color: #BFD4E6;
+  }
+}
+
+/* Desktops (large devices) */
+@media (min-width: 1025px) {
+  body {
+    background-color: #BFD4E6;
+  }
+}
+
